[FIX] do not float content to the right on small screens

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -174,6 +174,12 @@
 		float: right;
 	}
 
+@media (max-width: 40em) {
+	.right {
+		float: none;
+	}
+}
+
 	.small {
 		font-size: 0.8em;
 	}
